syntax = "proto3";

option csharp_namespace = "GrpcService";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto"; // For Nullable Types (https://docs.microsoft.com/en-us/dotnet/architecture/grpc-for-wcf-developers/protobuf-data-types)


package Greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetCustomers (CustomersRequest) returns (CustomersResponse);
  rpc GetDeliveryNoteDetailsReportData (SteelDeliveryNoteDetailReportCriteriaRequest) returns (stream SteelDeliveryNoteDetailReportDataResponse);
  rpc GetCustomersAsStreamAsync (.google.protobuf.Empty) returns (stream Customer);
  rpc DownloadReportFile(ReportRequest) returns(stream DataChunk);
}

message SteelDeliveryNoteDetailReportCriteriaRequest{
	google.protobuf.Timestamp FromDate=1;
	google.protobuf.Timestamp ToDate=2;
	google.protobuf.Int32Value CustomerId=3;
	google.protobuf.Int32Value ProjectId=4;
	google.protobuf.Int32Value ProductGroupId=5;
	google.protobuf.Int32Value ProductCategoryId=6;
	google.protobuf.Int32Value ProductId=7;
	google.protobuf.Int32Value MovementTypeId=8;
	google.protobuf.Int32Value InvoicedById=9;
	google.protobuf.Int32Value SalesOrderId=10;
	google.protobuf.Int32Value DeliveryTypeId=11;
	google.protobuf.Int32Value SubOrderId=12;
	google.protobuf.Int32Value Delivered=13;
	google.protobuf.Int32Value WeightType=14;
	string dbName=15;
}

message SteelDeliveryNoteDetailReportDataResponse{
	string Type=1;
	int32 DONo=2;
	google.protobuf.Timestamp Date=3;
	google.protobuf.Timestamp DeliveredDate=4;
	string CustomerName=5;
	string SunAccountCode=6;
	string VatRegNo=7;
	string ProjectName=8;
	string AccountCode=9;
	string InvoicedByName=10;
	string SuppliedBy=11;
	string MovementType=12;
	string DeliveryTypeName=13;
	string ProductName=14;
	string Abbr=15;
	string Origin=16;
	string OrderRef=17;
	string SubOrderRef=18;
	string Code=19;
	string BBSRef=20;
	string OtherRef=21;
	DecimalValue D08MM=22;
	DecimalValue D10MM=23;
	DecimalValue D12MM=24;
	DecimalValue D14MM=25;
	DecimalValue D16MM=26;
	DecimalValue D18MM=27;
	DecimalValue D20MM=28;
	DecimalValue D22MM=29;
	DecimalValue D25MM=30;
	DecimalValue D28MM=31;
	DecimalValue D32MM=32;
	DecimalValue D40MM=33;

}




// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message CustomersRequest{
	int32 id=1;
}

message CustomersResponse{
	repeated Customer Customers =1;
}

message ReportRequest{
	int32 id=1;
}

message DataChunk {
   bytes data = 1;
}


message DecimalValue {

  // The whole units of the amount.
  int64 units = 1;

  // Number of nano (10^-9) units of the amount.
  // The value must be between -999,999,999 and +999,999,999 inclusive.
  // If `units` is positive, `nanos` must be positive or zero.
  // If `units` is zero, `nanos` can be positive, zero, or negative.
  // If `units` is negative, `nanos` must be negative or zero.
  // For example $-1.75 is represented as `units`=-1 and `nanos`=-750,000,000.
  int32 nanos = 2;
}





message Customer {
    int32 id = 1;
    string name = 2;
	google.protobuf.Int32Value partnerId=3;
	google.protobuf.Timestamp createdDate=4;
    DecimalValue salary=5;
	repeated Project projects=6;
}

message Project 
{
	int32 id=1;
	string name=2;
}



